tests/snapshots/r#mod__color_red.snap
---
source: tests/mod.rs
expression: snap
---
color(red)(x)

<math>
  <mstyle mathcolor="red">
    <mi>
      x
    </mi>
  </mstyle>
</math>

