tests/snapshots/r#mod__derivative.snap
---
source: tests/mod.rs
expression: snap
---
f'(x) = dy/dx

<math>
  <mi>
    f
  </mi>
  <mo>
    '
  </mo>
  <mo>
    (
  </mo>
  <mi>
    x
  </mi>
  <mo>
    )
  </mo>
  <mo>
    =
  </mo>
  <mfrac>
    <mi>
      dy
    </mi>
    <mi>
      dx
    </mi>
  </mfrac>
</math>

