tests/snapshots/r#mod__integral.snap
---
source: tests/mod.rs
expression: snap
---
int_0^1 f(x)dx

<math>
  <msubsup>
    <mo>
      ∫
    </mo>
    <mn>
      0
    </mn>
    <mn>
      1
    </mn>
  </msubsup>
  <mi>
    f
  </mi>
  <mrow>
    <mo>
      (
    </mo>
    <mi>
      x
    </mi>
    <mo>
      )
    </mo>
  </mrow>
  <mi>
    dx
  </mi>
</math>

