tests/snapshots/r#mod__math_caligraphy.snap
---
source: tests/mod.rs
expression: snap
---
cc "AaBbCc"

<math>
  <mstyle mathvariant="script">
    <mtext>
      AaBbCc
    </mtext>
  </mstyle>
</math>

