tests/snapshots/r#mod__math_fraktur.snap
---
source: tests/mod.rs
expression: snap
---
fr "AaBbCc"

<math>
  <mstyle mathvariant="fraktur">
    <mtext>
      AaBbCc
    </mtext>
  </mstyle>
</math>

