tests/snapshots/r#mod__math_outlined.snap
---
source: tests/mod.rs
expression: snap
---
bbb "AaBbCc"

<math>
  <mstyle mathvariant="double-struck">
    <mtext>
      AaBbCc
    </mtext>
  </mstyle>
</math>

