tests/snapshots/r#mod__matrix_layout.snap
---
source: tests/mod.rs
expression: snap
---
{(2x,+,17y,=,23),(x,-,y,=,5):}

<math>
  <mrow>
    <mo>
      {
    </mo>
    <mtable columnlines="none none none none none ">
      <mtr>
        <mtd>
          <mrow>
            <mn>
              2
            </mn>
            <mi>
              x
            </mi>
          </mrow>
        </mtd>
        <mtd>
          <mo>
            +
          </mo>
        </mtd>
        <mtd>
          <mrow>
            <mn>
              17
            </mn>
            <mi>
              y
            </mi>
          </mrow>
        </mtd>
        <mtd>
          <mo>
            =
          </mo>
        </mtd>
        <mtd>
          <mn>
            23
          </mn>
        </mtd>
      </mtr>
      <mtr>
        <mtd>
          <mi>
            x
          </mi>
        </mtd>
        <mtd>
          <mo>
            -
          </mo>
        </mtd>
        <mtd>
          <mi>
            y
          </mi>
        </mtd>
        <mtd>
          <mo>
            =
          </mo>
        </mtd>
        <mtd>
          <mn>
            5
          </mn>
        </mtd>
      </mtr>
    </mtable>
    <mphantom>
      <mo>
        }
      </mo>
    </mphantom>
  </mrow>
</math>

