tests/snapshots/r#mod__obrace.snap
---
source: tests/mod.rs
expression: snap
---
obrace(1+2)

<math>
  <mover>
    <mrow>
      <mn>
        1
      </mn>
      <mo>
        +
      </mo>
      <mn>
        2
      </mn>
    </mrow>
    <mo>
      ⏞
    </mo>
  </mover>
</math>

