tests/snapshots/r#mod__obrace_text.snap
---
source: tests/mod.rs
expression: snap
---
obrace(1+2+3+4)^("4 terms")

<math>
  <mover>
    <mover>
      <mrow>
        <mn>
          1
        </mn>
        <mo>
          +
        </mo>
        <mn>
          2
        </mn>
        <mo>
          +
        </mo>
        <mn>
          3
        </mn>
        <mo>
          +
        </mo>
        <mn>
          4
        </mn>
      </mrow>
      <mo>
        ⏞
      </mo>
    </mover>
    <mrow>
      <mphantom>
        <mo>
          }
        </mo>
      </mphantom>
      <mtext>
        4 terms
      </mtext>
      <mphantom>
        <mo>
          {
        </mo>
      </mphantom>
    </mrow>
  </mover>
</math>

